3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix uninitialized memory / invalid memory access.
 common/arch.c treasure.c
Nicolas Weeger 2007-06-01

Fix bug #1729192: Writing any spellscroll requires positive grace.
 server/skills.c
Nicolas Weeger 2007-06-01

Implement feature request #1724356: logging improvements.
Apply modified patch from Wart.
New settings log_timestamp and log_timestamp_format to control behaviour.
Log player creation.
 common/init.c logger.c
 include/global.h
 lib/settings
 server/c_misc.c init.c
Nicolas Weeger 2007-05-30

Fix bug #1726632: After useing a # of times on the forge..
server/alchemy.c: item may change, so its weight too. This leads to invalid carrying.
Nicolas Weeger 2007-05-30

Documentation, fix indentation. No functional change.
server/ban.c build_map.c
Nicolas Weeger 2007-05-29

lib/formulae: fix bug #1726561: formulae for potion_heal needs supreme potion of life.
Nicolas Weeger 2007-05-28

utils/mapper.c: add a world map of used and unused exits / blocking zones / roads.
Nicolas Weeger 2007-05-28

common/button.c: calming mood floors should calm attacking monsters.
Nicolas Weeger 2007-05-27

server/c_move.c: remove extra space.
Nicolas Weeger 2007-05-27

server/attack.c: document code, no functional change.
Nicolas Weeger 2007-05-26

server/apply.c: food/drink can't be eaten if no_pick is set.
Nicolas Weeger 2007-05-26

server/c_misc.c: use region's longname for 'mapinfo', neater than name.
Nicolas Weeger 2007-05-26

lib/messages: some more stories.
Nicolas Weeger 2007-05-26

Document code, no functional change.
 common/arch.c
 include/define.h
 server/apply.c
Nicolas Weeger 2007-05-25
