@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove obsolete oldsocket stuff.
+ include/newserver.h sockproto.h sproto.h
+ server/commands.c
+ socket/info.c loop.c lowlevel.c
+Nicolas Weeger 2007-06-02
+
 Fix uninitialized memory / invalid memory access.
  common/arch.c treasure.c
 Nicolas Weeger 2007-06-01
